--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/fancy-cushion.png);">
     <header style="background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/fancy-cushion.png);">
-        <h1> <div style="text-align: left"><img src="logo.png" width="100px" height="60px"/></div> Pierce The Veil</h1>
+        <h1> <div style="text-align: left"><img src="logo.png" width="100px" height="60px" alt="logo"/></div> Pierce The Veil</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -32,6 +32,8 @@
     </main>
     <footer>
         <p>&copy; 2024 Pierce The Veil. All rights reserved.</p>
+        <img src="htmlv.png" height="100px" width="200px">
+        <img src="cssv.png" height="100px" width="200px">
     </footer>
 </body>
 </html>
