--- a/albums.html
+++ b/albums.html
@@ -6,9 +6,6 @@
     <title>Albums and lyrics</title>
     <link rel="stylesheet" href="styles.css">
 
-    <map name="logo">
-        <area shape="rect" coord="0,0,100,100" alt="logo" href="">
-    </map>
 
     <map name="mapa1">
         <area shape="rect" coords="0,0,400,400" alt="first album" href="https://genius.com/albums/Pierce-the-veil/The-jaws-of-life">
@@ -28,6 +25,7 @@
 
 
 </head>
+
 <body style="background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/fancy-cushion.png);">
     <header style="background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/fancy-cushion.png);">
         <h1> <div style="text-align: left"><img src="logo.png" width="100px" height="60px"/></div> Pierce The Veil</h1>
@@ -125,6 +123,8 @@
     
     <footer>
         <p>&copy; 2024 Pierce The Veil. All rights reserved.</p>
+        <img src="htmlv.png" height="100px" width="200px">
+        <img src="cssv.png" height="100px" width="200px">
     </footer>
 </body>
 </html>
